syntax = "proto3";

package quilt;

// ============================================================================
// Quilt Runtime Service
// ============================================================================
// These 3 RPCs need to be implemented by the Quilt runtime to support
// multi-host networking via Quilt Mesh.

service QuiltRuntime {
  // Configure the node's subnet for container IP allocation
  // This tells Quilt to only allocate IPs from the given subnet (e.g., "10.42.1.0/24")
  rpc ConfigureNodeSubnet(ConfigureNodeSubnetRequest) returns (ConfigureNodeSubnetResponse);

  // Inject a route for a remote subnet via the overlay interface
  // This adds a kernel route so traffic to remote containers routes through VXLAN
  // Example: destination="10.42.2.0/24", via_interface="vxlan100"
  rpc InjectRoute(InjectRouteRequest) returns (InjectRouteResponse);

  // Remove a route for a remote subnet
  // Called when a peer node leaves the cluster
  rpc RemoveRoute(RemoveRouteRequest) returns (RemoveRouteResponse);
}

// ============================================================================
// ConfigureNodeSubnet RPC
// ============================================================================

message ConfigureNodeSubnetRequest {
  // The subnet to allocate container IPs from (CIDR notation)
  // Example: "10.42.1.0/24"
  string subnet = 1;
}

message ConfigureNodeSubnetResponse {
  // true if configuration succeeded
  bool success = 1;

  // Error message if success=false
  string error = 2;
}

// ============================================================================
// InjectRoute RPC
// ============================================================================

message InjectRouteRequest {
  // Destination subnet (CIDR notation)
  // Example: "10.42.2.0/24"
  string destination = 1;

  // Interface to route traffic through
  // Example: "vxlan100"
  string via_interface = 2;
}

message InjectRouteResponse {
  // true if route injection succeeded
  bool success = 1;

  // Error message if success=false
  string error = 2;
}

// ============================================================================
// RemoveRoute RPC
// ============================================================================

message RemoveRouteRequest {
  // Destination subnet to remove route for
  // Example: "10.42.2.0/24"
  string destination = 1;
}

message RemoveRouteResponse {
  // true if route removal succeeded
  bool success = 1;

  // Error message if success=false
  string error = 2;
}
